# o3de-imguizep

./: .gitignore  CMakeLists.txt  README.md  gem.json
Assets/: ZepExample.lua  created.lua  zep.cfg
Code/: CMakeLists.txt  imguizep_api_files.cmake  imguizep_editor_private_files.cmake  imguizep_editor_shared_files.cmake  imguizep_editor_tests_files.cmake  imguizep_private_files.cmake  imguizep_shared_files.cmake  imguizep_tests_files.cmake  zep.patch
Code/Include/ImGuiZep/: ImGuiZepBus.h
Code/Platform/Android/: PAL_android.cmake  imguizep_private_files.cmake
Code/Platform/Linux/: imguizep_private_files.cmake
Code/Platform/Mac/: PAL_mac.cmake  imguizep_shared_files.cmake
Code/Platform/Windows/: PAL_windows.cmake  imguizep_shared_files.cmake
Code/Platform/iOS/: imguizep_shared_files.cmake
Code/Source/: ImGuiZepEditorModule.cpp  ImGuiZepEditorSystemComponent.cpp  ImGuiZepEditorSystemComponent.h  ImGuiZepModule.cpp  ImGuiZepModuleInterface.h  ImGuiZepSystemComponent.cpp  ImGuiZepSystemComponent.h
Registry/: assetprocessor_settings.setreg
